--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bookshelf</title>
+    <title>Bookshelf shopping list</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,10 +15,6 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-    <div class="section">
-      <div class="container">
-        <a href="./shopping-list.html">go to shopping list</a>
-      </div>
-    </div>
+    <a href="./index.html">go home</a>
   </body>
 </html>
