--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,26 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/header.html"></include>
     <div class="section">
       <div class="container">
-        <a href="./shopping-list.html">go to shopping list</a>
+        <a href="./shopping-list.html"
+          >go to shopping list (я временный линк перехода в корзину)</a
+        >
       </div>
     </div>
+    <div>
+      <include src="./partials/header.html"></include>
+      <include src="./partials/modal-menu.html"></include>
+    </div>
+
+    <div class="page">
+      <div class="side-bar">
+        <include src="./partials/all-categories.html"></include>
+        <include src="./partials/support.html"></include>
+      </div>
+      <include src="./partials/all-books.html"></include>
+    </div>
+
+    <include src="./partials/pop-up.html"></include>
   </body>
 </html>
