--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -14,7 +14,17 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/header.html"></include>
-    <a href="./index.html">go home</a>
+    <a href="./index.html">go home (я временный линк перехода в корзину)</a>
+    <div>
+      <include src="./partials/header.html"></include>
+      <include src="./partials/modal-menu.html"></include>
+    </div>
+
+    <div class="page">
+      <include src="./partials/support.html"></include>
+      <include src="./partials/shoplist.html"></include>
+    </div>
   </body>
+
+  <include src="./partials/pop-up.html"></include>
 </html>
