add api and render categories

--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,6 @@
     </div>
 
     <include src="./partials/pop-up.html"></include>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
