--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <include src="./partials/modal-menu.html"></include>
     </div>
 
-    <div class="page">
+    <div class="page container">
       <div class="side-bar">
         <include src="./partials/all-categories.html"></include>
         <include src="./partials/support.html"></include>
