--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -20,7 +20,7 @@
       <include src="./partials/modal-menu.html"></include>
     </div>
 
-    <div class="page">
+    <div class="page container">
       <include src="./partials/support.html"></include>
       <include src="./partials/shoplist.html"></include>
     </div>
