--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/index.css" />
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
   </head>
   <body>
     <a href="./index.html">go home (я временный линк перехода в корзину)</a>
