--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -19,7 +19,7 @@
       <include src="./partials/modal-menu.html"></include>
     </div>
 
-    <div class="page container">
+    <div class="page container page-sh">
       <include src="./partials/support.html"></include>
       <include src="./partials/shoplist.html"></include>
     </div>
