--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       </div>
       <include src="./partials/all-books.html"></include>
     </div>
-
+    <include src="./partials/footer.html"></include>
     <include src="./partials/pop-up.html"></include>
   </body>
 </html>
