--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -24,6 +24,6 @@
       <include src="./partials/shoplist.html"></include>
     </div>
   </body>
-
+  <include src="./partials/footer.html"></include>
   <include src="./partials/pop-up.html"></include>
 </html>
