--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshelf shopping list</title>
-    <link rel="icon" type="image/svg+xml" href="./images/public/head-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/head-icon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./css/index.css" />
