support in shopping list

--- a/src/shopping-list.html
+++ b/src/shopping-list.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="page container page-sh">
-      <include src="./partials/support.html"></include>
+      <include src="./partials/support2.html"></include>
       <include src="./partials/shoplist.html"></include>
     </div>
   </body>
